--- a/_config.yml
+++ b/_config.yml
@@ -5,12 +5,12 @@ description: " Personal  Website  for  Devon  Peel.
 Christ follower, Techie, Kansas State and KC Royals Fan"
 
 # url is currently only used only for the RSS feed in feed.xml
-url: https://devonpeel.me
+url: http://devonpeel.me
 # baseurl will often be '', but for a project page on gh-pages, it needs to
 # be the project name.
 # *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
 #     run it like so: jekyll serve --baseurl=''
-baseurl: 'dp3.github.io'
+baseurl: ''
 
 # This can be '' to hide the Github nav button
 github: 'dp3'
