edited side bar phrase

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-# Jekyll configuration
+#Jekyll configuration
 
 name: DevonPeel.me
-description: " Personal  Website  for  Devon  Peel.
-Christ follower, Techie, Kansas State and KC Royals Fan"
+description: " Personal  Website  for  Devon  Peel. 
+Kansas State and KC Royals Fan"
 
 # url is currently only used only for the RSS feed in feed.xml
 url: https://devonpeel.me
